@@ -4,14 +4,14 @@
 Polish, Chinese, French, Russian, Italian, Dutch
 and [more languages](https://www.languagetool.org/languages/)**
 
-Version 4.0-SNAPSHOT, 2017-xx-xx  
+Version 4.0, 2017-12-29  
 Copyright (C) 2005-2017 the LanguageTool community and Daniel Naber (www.danielnaber.de)  
-Homepage: https://www.languagetool.org
+https://www.languagetool.org
 
 
 ## Requirements
 
-* Java 8 or later (when using with Java 9, see https://forum.languagetool.org/t/lt-and-java-9/1588)
+* Java 8 or later
 * For LibreOffice/OpenOffice.org integration:
     * LibreOffice 3.5.4 (or later) or
     * Apache OpenOffice 3.4.1 (or later)
@@ -23,12 +23,12 @@ Homepage: https://www.languagetool.org
 
 To integrate LanguageTool into LibreOffice or OpenOffice.org, you can use two methods:
 
-* Double-click `LanguageTool-3.9.oxt`. The extension should
+* Double-click `LanguageTool-4.0.oxt`. The extension should
    start installing. Follow the on-screen instructions.
 
 * If the above method doesn't work, call `Tools > Extension
    Manager > Add...` in LibreOffice/OpenOffice.org and browse for the
-   `LanguageTool-3.9.oxt` file.
+   `LanguageTool-4.0.oxt` file.
 
 Close and restart LibreOffice/OpenOffice.org Writer. Remember to close
 the QuickStarter as well if you use it. Type text with
@@ -61,10 +61,6 @@ Please see https://www.languagetool.org/issues/ if you experience problems.
 
 To use the stand-alone version, double click on the `languagetool.jar` file
 or call `java -jar languagetool.jar` from the command line.
-
-When using Java 9, start LanguageTool using `java --add-modules java.xml.bind -jar languagetool.jar`.
-Without that parameter, you'd get an `java.lang.NoClassDefFoundError: javax/xml/bind/JAXBException`
-error.
 
 ### Command-line version
 
